add links to notebooks textures

--- a/cvpr_textures/index.html
+++ b/cvpr_textures/index.html
@@ -12,5 +12,11 @@ Texture Generation with Neural Cellular Automata
 <br>
 <br>
 <a href="videos.html">Videos accompanying paper</a>
+<br>
+<br>
+<a href="https://colab.research.google.com/github/google-research/self-organising-systems/blob/master/notebooks/texture_nca_tf2.ipynb">TF2 implementation</a>
+<br>
+<br>
+<a href="https://colab.research.google.com/github/google-research/self-organising-systems/blob/master/notebooks/texture_nca_pytorch.ipynb">PyTorch implementation</a>
 </body>
 </html>
