--- a/rd/index.html
+++ b/rd/index.html
@@ -26,7 +26,6 @@ Alexander Mordvinstev, Ettore Randazzo, Eyvind Niklasson
 
 <div class='grid'>
 
-
 <figure>
     <video controls loop src="video/lizards_zoom.mp4"></video><br>
     <caption>"lizards" non-uniform diffusion (Fig.4)</caption>
@@ -43,3 +42,21 @@ Alexander Mordvinstev, Ettore Randazzo, Eyvind Niklasson
 </figure>
 
 </div>
+
+<figure>
+<video controls src="video/mesh_lizard.mp4"></video>
+<video controls src="video/mesh_interlaced.mp4"></video>
+<video controls src="video/mesh_grid.mp4"></video>
+<video controls src="video/mesh_banded.mp4"></video>
+<caption>Figure 5</caption>
+</figure>
+
+<figure>
+<video controls src="video/vol_lizards.mp4"></video>
+<video controls src="video/vol_interlaced.mp4"></video>
+<video controls src="video/vol_spots.mp4"></video>
+<video controls src="video/vol_grid.mp4"></video>
+<video controls src="video/vol_banded.mp4"></video>
+<video controls src="video/vol_lined.mp4"></video>
+<caption>Figure 6</caption>
+</figure>
