--- a/rd/index.html
+++ b/rd/index.html
@@ -48,7 +48,7 @@ Alexander Mordvinstev, Ettore Randazzo, Eyvind Niklasson
 <video controls src="video/mesh_interlaced.mp4"></video>
 <video controls src="video/mesh_grid.mp4"></video>
 <video controls src="video/mesh_banded.mp4"></video>
-<caption>Figure 5</caption>
+<br><caption>Figure 5</caption>
 </figure>
 
 <figure>
@@ -58,5 +58,5 @@ Alexander Mordvinstev, Ettore Randazzo, Eyvind Niklasson
 <video controls src="video/vol_grid.mp4"></video>
 <video controls src="video/vol_banded.mp4"></video>
 <video controls src="video/vol_lined.mp4"></video>
-<caption>Figure 6</caption>
+<br><caption>Figure 6</caption>
 </figure>
