upload paper while waiting for arXiv moderation

--- a/alife_rd_textures/index.html
+++ b/alife_rd_textures/index.html
@@ -85,7 +85,7 @@ figure {
         <tbody>
             <tr>
               <td align="center" width="200px">
-              <center><span style="font-size:22px"><a href="https://TBA">[arXiv]</a></span></center></td>
+              <center><span style="font-size:22px"><a href="ALIFE_Reaction_Diffusion.pdf">[Paper]</a></span></center></td>
               <td align="center" width="200px">
               <center><span style="font-size:22px"><a href="https://colab.research.google.com/github/google-research/self-organising-systems/blob/master/notebooks/reaction_diffusion_textures.ipynb">[Colab]</a></span></center></td>
           </tr>
@@ -187,11 +187,11 @@ Reaction-Diffusion (RD) systems provide a computational framework that governs m
 <div>
 <center><h3>Paper</h3></center>
 <hr>
-<a href="https://TBA"><img src="thumbnail_rd.png"></a>
+<a href="ALIFE_Reaction_Diffusion.pdf"><img src="thumbnail_rd.png"></a>
 <center><h3>BibTeX</h3></center>
 <hr>
 <div id="bibtex">
-           TBA @ Alife 2021
+           TBA @ ALIFE 2021
 
 
 
