update RD page - add youtube embed of znah's talk - add correct BibTex

--- a/alife_rd_textures/index.html
+++ b/alife_rd_textures/index.html
@@ -49,6 +49,13 @@ figure {
     white-space: pre;
     background-color: #f4f4f4;
     text-align: left;
+    padding:  30px;
+    width:  740px;
+    /* select all text when copying */
+    -webkit-user-select: all;  /* Chrome 49+ */
+    -moz-user-select: all;     /* Firefox 43+ */
+    -ms-user-select: all;      /* No support yet */
+    user-select: all;          /* Likely future */   
 }
 </style>
 <body>
@@ -102,6 +109,13 @@ Reaction-Diffusion (RD) systems provide a computational framework that governs m
 </div>
 
 <div>
+<br>
+<center><h3>Presented @ ALife 2021</h3></center>
+<hr>
+<div id="talk">
+    <iframe width="800" height="400" src="https://www.youtube.com/embed/otkcUeIrDYI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<br>
 <center><h3>Supplementary Videos</h3></center>
 <hr>
 
@@ -190,11 +204,13 @@ Reaction-Diffusion (RD) systems provide a computational framework that governs m
 <a href="ALIFE_Reaction_Diffusion.pdf"><img src="thumbnail_rd.png"></a>
 <center><h3>BibTeX</h3></center>
 <hr>
-<div id="bibtex">
-           TBA @ ALIFE 2021
-
-
-
+<div id="bibtex">@inproceedings{mordvintsev2021differentiable,
+  title={Differentiable Programming of Reaction-Diffusion Patterns},
+  author={Mordvintsev, Alexander and Randazzo, Ettore and Niklasson, Eyvind},
+  booktitle={ALIFE 2021: The 2021 Conference on Artificial Life},
+  year={2021},
+  organization={MIT Press}
+}
 </div>
 
 <br>
